--- a/vite-Veu/package.json
+++ b/vite-Veu/package.json
@@ -10,7 +10,9 @@
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "vite": "^1.0.0-rc.13"
   }
 }
