--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
           host: ${{ secrets.TENCENT_CLOUD_IP }} #云服务器的ip
           username: ${{ secrets.TENCENT_CLOUD_NAME }} #云服务器的用户名
           password: ${{ secrets.TENCENT_CLOUD_PASSWORD }} #云服务器的密码
-          script: cd ~ && sh deployComputer.sh ${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_PASSWORD }} #运行脚本
+          script: cd ~ && sh demoforComputer.sh ${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_PASSWORD }} #运行脚本
